--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@ img{width:100%;height:auto;}
 .typed-cursor{font-weight:500;}
 .me{width:15%;height:20%;border:0px;border-radius:20%;display:inline;margin-bottom:3%;}
 .intro{background-image:url('../img/meAtBelantis_dp.jpg');background-size:cover;font-family:monospace;}
-.who{background-image:url("../img/cover_min.png");background-size:cover;color:aliceblue;font-family:monospace;}
+.who{background-image:url("../img/aquatica_trip1.jpg");background-size:cover;color:aliceblue;font-family:monospace;}
 .who a{color:#C26262;font-weight:600;}
 .love{background:#D4DEDE;}
 .work{background:-webkit-linear-gradient(90deg, #403B4A 10%, #727261 90%);background:-moz-linear-gradient(90deg, #403B4A 10%, #727261 90%);background:-ms-linear-gradient(90deg, #403B4A 10%, #727261 90%);background:-o-linear-gradient(90deg, #403B4A 10%, #727261 90%);background:linear-gradient(90deg, #403B4A 10%, #727261 90%);text-align:center;}
@@ -78,8 +78,8 @@ nav nav-tabs li:active{color:black;}
 .major_skill{display:none;}
 .mini_skill{display:block;}
 }
-@media only screen and (max-width:935px){.intro{background-image:url('../img/me_cric.png');background-size:100% 50%;background-repeat:no-repeat;}
-body{background-image:url('../img/mini_cric.png');background-size:contain;}
+@media only screen and (max-width:935px){.intro{background-image:url('../img/aquatica_trip1.jpg');background-size:100% 50%;background-repeat:no-repeat;}
+body{background-image:url('../img/aquatica_trip1.jpg');background-size:contain;}
 }
 #code_lang{color:#D64727;}
 .mini_proj_slide{position:relative;top:44%;text-align:center;left:0%;margin-left:15%;}
